fix: contrast on book2 title div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5{
     border: 2px solid #4D767B;
 }
 .book-2, .link-2{
-    background-color: #486596;
+    background-color: #2f3189;
     color: #94e264;
     border: 2px solid #C62022;
 }
@@ -159,7 +159,7 @@ h1, h2, h3, h4, h5{
     color: #FFFFFF;
 }
 .book-2-title{
-    color: #8f0303;
+    color: #ff3236;
 }
 .book-3-title{
     color: #6ec5ba;
